Redis: fix wrong authorization check (#261)
* fix(RedisEmbeddingStore): fix wrong authorization check in RedisEmbeddingStore

* feat: remove AutoCloseable

* chore: fix failed tests

* feat: RedisEmbeddingStore spring boot starter support JedisPooled and JedisClientConfig